// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputComponent > rendering component > should match snapshot with no @Input properties defined 1`] = `
<div
  _nghost-a-c2063722020=""
  id="root1"
  ng-version="21.0.0"
>
  <div
    _ngcontent-a-c2063722020=""
    class="ogm-form"
  >
    <input
      _ngcontent-a-c2063722020=""
      autocomplete="off"
      data-tes=""
      data-testid="ogm-input"
      maxlength="10"
      placeholder=""
      type="text"
    />
  </div>
</div>
`;

exports[`InputComponent > rendering component > should match snapshot with validate set to false 1`] = `
<div
  _nghost-a-c2063722020=""
  id="root2"
  ng-version="21.0.0"
>
  <div
    _ngcontent-a-c2063722020=""
    class="ogm-form"
  >
    <input
      _ngcontent-a-c2063722020=""
      autocomplete="off"
      data-tes=""
      data-testid="ogm-input"
      maxlength="10"
      placeholder="Placeholder message"
      type="text"
    />
  </div>
</div>
`;

exports[`InputComponent > rendering component > should match snapshot with validate set to true 1`] = `
<div
  _nghost-a-c2063722020=""
  id="root3"
  ng-version="21.0.0"
>
  <div
    _ngcontent-a-c2063722020=""
    class="ogm-form"
  >
    <input
      _ngcontent-a-c2063722020=""
      autocomplete="off"
      data-tes=""
      data-testid="ogm-input"
      maxlength="12"
      placeholder="Placeholder message"
      type="text"
    />
  </div>
</div>
`;
